--- a/feed.html
+++ b/feed.html
@@ -44,7 +44,7 @@
             </div>
             <img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885__480.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-                <h5 class="card-title">23 Likes</h5>
+                <h5 class="card-title">84 likes</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque non elit ornare, interdum libero id, ultrices sem. Duis molestie elementum ipsum et eleifend. Nunc porta.</p>
                 <button type="button" class="btn btn-light btn-sm">
                     <i class="far fa-heart"></i>
@@ -62,7 +62,7 @@
             </div>
             <img src="https://media.istockphoto.com/id/1146517111/photo/taj-mahal-mausoleum-in-agra.jpg?s=612x612&w=0&k=20&c=vcIjhwUrNyjoKbGbAQ5sOcEzDUgOfCsm9ySmJ8gNeRk=" class="card-img-top" alt="...">
             <div class="card-body">
-                <h5 class="card-title">20 Likes</h5>
+                <h5 class="card-title">12 Likes</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque non elit ornare, interdum libero id, ultrices sem. Duis molestie elementum ipsum et eleifend. Nunc porta.</p>
                 <button type="button" class="btn btn-light btn-sm">
                     <i class="far fa-heart"></i>
@@ -80,7 +80,7 @@
                 </div>
                 <img src="https://picsum.photos/id/724/550/400" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">115 Likes</h5>
+                    <h5 class="card-title">77 Likes</h5>
                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque non elit ornare, interdum libero id, ultrices sem. Duis molestie elementum ipsum et eleifend. Nunc porta.</p>
                     <button type="button" class="btn btn-light btn-sm">
                         <i class="far fa-heart"></i>
@@ -98,7 +98,7 @@
                 </div>
                 <img src="https://picsum.photos/id/444/550/400" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">30 Likes</h5>
+                    <h5 class="card-title">10 Likes</h5>
                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque non elit ornare, interdum libero id, ultrices sem. Duis molestie elementum ipsum et eleifend. Nunc porta.</p>
                     <button type="button" class="btn btn-light btn-sm">
                         <i class="far fa-heart"></i>
